<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    tools:context="xyz.sumeshmajhi.www.sakam.MainActivity">

    <!--TOOLBAR SECTION-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <!--NESTED SCROLL VIEW SECTION-->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_id"
        android:clipToPadding="false"
        app:layout_behavior="@string/nested_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <!--IMAGE SLIDESHOW SECTION-->
            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager_id"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <!--CIRCULAR INDICATOR SECTION-->
            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/circleIndicator_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/viewPager_id"
                android:layout_marginTop="-50dp" />



            <!--Card View Section-->

            <android.support.v7.widget.CardView
                android:id="@+id/eklavyaCardViewID"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cardViewText1ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eklavya_model_residential_school"
                        android:textColor="@android:color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/cardViewText2ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionE"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/emrsButtonID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_more" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ashramCardViewID"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cardViewText3ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ashram_schools"
                        android:textColor="@android:color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/cardViewText4ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionA"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/asButtonID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_more" />

                </LinearLayout>

            </android.support.v7.widget.CardView>















 </LinearLayout>


    </android.support.v4.widget.NestedScrollView>




    <!--BOTTOM NAVIGATION SECTION-->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigation_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/bottom_navigation_menu"
            app:theme="@style/BottomNavigationTheme" />


    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>
